Dumping code from data.worldbank.org

--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,6 @@
 ---
 title: 'Worldbank Open Government Data toolkit'
-template: 'page.html'
+template: 'default.html'
 ---
 
 <header class='header'>
