--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0;url=/en/">
-        <script type="text/javascript">
-            window.location.href = "/en/"
-        </script>
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        If you are not redirected automatically, follow the <a href='/en/'>link</a>
-    </body>
-</html>
+toto
