Add resource pages for courses 2 & 3

--- a/elearning/opendata-course1.html
+++ b/elearning/opendata-course1.html
@@ -192,7 +192,7 @@ ol {
   <p><ul><li><a href="http://opendatatoolkit.worldbank.org/en/demand.html#communities" target="_blank">Open Data Communities</a> (Open Data Toolkit, World Bank)</li></ul> </p>
   <p><ul><li><a href="url"></a>Examples of User Engagement</li></ul> </p>
   <p><ol><li><a href="https://open.canada.ca/en/open-data" target="_blank">Open Data Canada</a></li></ol> </p>
-  <p><ol><li><a href="http://data.edostate.gov.ng/Home/dataset/list-of-legal-dump-sites-in-edo-state.html" target="_blank">Edo State, Nigeria</a></li></ol> </p>
+  <p><ol><li><a href="http://data.edostate.gov.ng/Home/?q=dataset/list-legal-dump-sites-edo-state" target="_blank">Edo State, Nigeria</a></li></ol> </p>
 </div>
 
 <div id="Tab5" class="tabcontent">
