Small change to elearning course files

--- a/elearning/opendata-course3.html
+++ b/elearning/opendata-course3.html
@@ -147,6 +147,7 @@ ol {
 <div id="Tab2" class="tabcontent">
   <!--<span onclick="this.parentElement.style.display='none'" class="topright">&times</span>-->
   <p><ul><li><a href="http://opendefinition.org/" target="_blank">Open Definition</a> (Open Knowledge)</li></ul> </p>
+  <p><ul><li><a href="http://opendatahandbook.org/guide/en/appendices/file-formats/" target="_blank">File Formats for Open Data</a> (Open Data Handbook)</li></ul></p>
   <p><ul><li><a href="http://5stardata.info/en/" target="_blank">5-Star Open Data Model</a></li></ul> </p>
   <p><ul><li><a href="url"></a>Open Data Assessments and Benchmarks</li></ul> </p>
 	  <p><ol><li><a href="https://opendatabarometer.org/" target="_blank">Open Data Barometer </a> (WWW Foundation)</li></ol> </p>
